# pulsar

./: .clang-format  .clangd  .gitignore  CMakeLists.txt
core/: CMakeLists.txt
core/source/: core_exports.hpp  defines.hpp
core/source/algorithm/: comparator.cpp  comparator.hpp
core/source/collection/: array.hpp  hash_map.hpp  index_range.hpp  option.hpp  result.hpp
core/source/hash/: hasher.hpp
core/source/io/: console.cpp  console.hpp  file_handle.hpp  file_system.hpp  platform_file_handle.cpp  platform_file_handle.hpp  platform_file_system.cpp  platform_file_system.hpp
core/source/memory/: allocator.hpp  deleter.hpp  memory.cpp  memory.hpp  memory_trace.cpp  memory_trace.hpp  reference_counter.hpp  shared_ref.hpp
core/source/string/: format.hpp  string.cpp  string.hpp  string.inl  string_buffer.hpp  string_ref.hpp
core/source/trace/: logger.cpp  logger.hpp  trace.hpp
modules/renderer-vulkan/: CMakeLists.txt
modules/renderer-vulkan/source/renderer/vulkan/: renderer_vulkan_exports.hpp  vulkan.cpp  vulkan.hpp
platform/: CMakeLists.txt
platform/source/: platform_exports.hpp
platform/source/windows/: windows_app.cpp  windows_app.hpp  windows_main.cpp
platform/source/windows/display/: windows_display.cpp  windows_display.hpp  windows_window.cpp  windows_window.hpp
platform/source/windows/main/: windows_main.cpp  windows_main.hpp
runtime/: CMakeLists.txt
runtime/source/: runtime_exports.hpp
runtime/source/display/: display.cpp  display.hpp
runtime/source/engine/: engine.cpp  engine.hpp
runtime/source/main/: main.cpp  main.hpp
runtime/source/module/: module.hpp  module_registry.cpp  module_registry.hpp
runtime/source/object/: object.cpp  object.hpp
runtime/source/window/: window.cpp  window.hpp
samples/01_demo/: CMakeLists.txt
samples/01_demo/source/: demo.cpp
samples/serializer_demo/: CMakeLists.txt
samples/serializer_demo/source/: main.cpp
tests/: CMakeLists.txt
tests/core/collection/: array_test.cpp  hash_map.cpp
